# back

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  linter.yaml  test.yaml
app/: firebase.py  main.py  notifications.py
app/adapters/: communities_controller.py  community_controller.py  exchange_controller.py  health_controller.py  report_controller.py  reports_controller.py  sticker_controller.py  user_controller.py  user_sticker_controller.py
app/adapters/dtos/: community_details.py  health.py  sticker_complete.py  sticker_details.py  user.py
app/conf/: config.py
app/db/impl/: community_manager.py  exchange_manager.py  mongo_manager.py  report_manager.py  sticker_manager.py  user_manager.py  user_sticker_manager.py
app/db/impl/exception/: error_join_user_to_community.py
app/db/model/: community.py  exchange.py  my_sticker.py  package.py  package_counter.py  py_object_id.py  report.py  sticker.py  sticker_metrics.py  user.py  user_id.py  user_sticker.py
docker/: entrypoint.sh
firebase/: tdp-ii-grupo-5-2022-2c-firebase-adminsdk-f71fl-bfacf0ba84.json
test/: test_app.py
tests/: mock_mongo_manager.py  stickers_freq.csv  test_exchanges.py  test_reports.py  test_stickers.py  test_users.py
tests/db/impl/: test_sticker_manager.py  test_user_manager.py
